k8s/08-url-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-service

spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-service
  template:
    metadata:
      labels:
        app: url-service
    spec:
      containers:
        - name: url-service
          image: sha2121/url-svc:latest
          ports:
            - containerPort: 3002
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 15
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: url-service

spec:
  selector:
    app: url-service
  ports:
    - port: 3002
      targetPort: 3002
