k8s/09-analytics-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service

spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
        - name: analytics-service
          image: sha2121/analytics-svc:latest
          ports:
            - containerPort: 3003
          livenessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 15
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service

spec:
  selector:
    app: analytics-service
  ports:
    - port: 3003
      targetPort: 3003
